# genesis_bio_mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  evaluation.xml  pyproject.toml  test_full.py
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  protein-engineering.md  tools.md
examples/: braf_melanoma_report.json  braf_melanoma_report.md  cd274_melanoma_report.json  cd274_melanoma_report.md  cox2_pain_report.json  cox2_pain_report.md  egfr_non-small_cell_lung_carcinoma_report.json  egfr_non-small_cell_lung_carcinoma_report.md  fto_fat_report.json  fto_fat_report.md  fto_obesity_report.json  fto_obesity_report.md  her2_breast_cancer_report.json  her2_breast_cancer_report.md  kras_pancreatic_cancer_report.json  kras_pancreatic_cancer_report.md  p53_lung_cancer_report.json  p53_lung_cancer_report.md  pcsk9_hypercholesterolemia_report.json  pcsk9_hypercholesterolemia_report.md  ptgs2_inflammation_report.json  ptgs2_inflammation_report.md  test_summary.json  tnf_joint_inflammation_report.json  tnf_joint_inflammation_report.md  tnf_rheumatoid_arthritis_report.json  tnf_rheumatoid_arthritis_report.md  tp53_squamous_cell_carcinoma_report.json  tp53_squamous_cell_carcinoma_report.md
src/genesis_bio_mcp/: __init__.py  models.py  server.py  workflow_agent.py
src/genesis_bio_mcp/clients/: alphafold.py  biogrid.py  chembl.py  clinical_trials.py  depmap.py  dgidb.py  gnomad.py  gtex.py  gwas.py  iedb_tools.py  interpro.py  mavedb.py  myvariant.py  open_targets.py  pubchem.py  reactome.py  sabdab.py  string_db.py  uniprot.py  variant_effects.py
src/genesis_bio_mcp/config/: efo_resolver.py  trait_synonyms.py
src/genesis_bio_mcp/tools/: biochem.py  gene_resolver.py  target_prioritization.py  variant_parser.py
tests/: conftest.py  test_biochem.py  test_clients.py  test_e2e.py  test_variant_parser.py  test_workflow_agent.py
