[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesis-bio-mcp"
version = "0.1.0"
description = "MCP server wrapping major public biomedical databases for AI-driven drug discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.1",
    "pydantic>=2.11.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
genesis-bio-mcp = "genesis_bio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis_bio_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
