[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesis-bio-mcp"
version = "0.2.3"
description = "MCP server wrapping major public biomedical databases for AI-driven drug discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "bioinformatics", "drug-discovery", "ai-agents", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.1",
    "pydantic>=2.11.0",
    "tenacity>=9.0.0",
    "anthropic>=0.94.0",
    "pydantic-settings>=2.13.1",
    "curl-cffi>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/WSobo/genesis-bio-mcp"
Repository = "https://github.com/WSobo/genesis-bio-mcp"
Issues = "https://github.com/WSobo/genesis-bio-mcp/issues"

[project.scripts]
genesis-bio-mcp = "genesis_bio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genesis_bio_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments
    "B905",   # zip() strict= — not needed for internal iteration
]

[tool.ruff.lint.isort]
known-first-party = ["genesis_bio_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src/genesis_bio_mcp"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
